--- a/config.json
+++ b/config.json
@@ -2,6 +2,10 @@
     "configuration": {
         "SECRET_KEY": "this_is_my_secret_key",
         "SQLALCHEMY_DATABASE_URI": "sqlite:///database.db",
+        "MONGODB_SETTINGS": {
+            "db": "articles",
+            "host": "mongodb://localhost:27017/articles"
+        },
         "TEMPLATES_FOLDER": "project/templates",
         "STATIC_FOLDER": "project/static",
         "MAIL_SERVER": "smtp.gmail.com",
