--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask==3.0.0
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
+flask-mongoengine @ git+https://github.com/idoshr/flask-mongoengine.git@e244408acf440c4208f7ddcd6e5d819cb472e4da
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
@@ -16,6 +17,8 @@ idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mongoengine==0.27.0
+pymongo==4.6.1
 SQLAlchemy==2.0.23
 typing_extensions==4.9.0
 Werkzeug==3.0.1
