--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,5 @@ cython_debug/
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/dbnavigator.xml
 .idea/Articlify.iml
+/project/static/styles/prism/
+/project/static/scripts/prism/
