--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 bcrypt==4.1.2
+bleach==6.1.0
 blinker==1.7.0
 Bootstrap-Flask==2.3.3
 click==8.1.7
@@ -19,7 +20,9 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 mongoengine==0.27.0
 pymongo==4.6.1
+six==1.16.0
 SQLAlchemy==2.0.23
 typing_extensions==4.9.0
+webencodings==0.5.1
 Werkzeug==3.0.1
 WTForms==3.1.1
